--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/generate-assets.js && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "sharp": "^0.32.5",
+    "sharp": "^0.32.5", 
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.4"
