--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,4 +1,4 @@
-name: Fixed Smart Feni Build
+name: Smart Feni Final Build
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 20
 
-      - name: Setup Java (JDK 17)
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
@@ -30,15 +30,15 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install
+          npm install @capacitor/assets --save-dev
           npm install -D tailwindcss postcss autoprefixer
 
-      # লোগো সেটআপের ম্যাজিক স্টেপ
-      - name: Setup Icons & Splash
+      # লোগো ফিক্সের জাদুকরী কমান্ড 🪄
+      - name: Setup Icons
         run: |
           mkdir -p assets
           cp public/logo.png assets/icon.png
           cp public/logo.png assets/splash.png
-          # আইকন জেনারেট করা হচ্ছে
           npx capacitor-assets generate --android
 
       - name: Build React App
@@ -46,20 +46,20 @@ jobs:
         env:
           CI: false
 
-      - name: Initialize & Sync Capacitor
+      - name: Init Capacitor
         run: |
           npx cap init "Smart Feni" "com.mxonlive.smartfeni" --web-dir build
           npx cap add android
           npx cap sync android
 
-      - name: Build APK (Debug)
+      - name: Build APK
         run: |
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
 
-      - name: Upload Fixed APK
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: Smart-Feni-Fixed-APK
+          name: Smart-Feni-Final
           path: android/app/build/outputs/apk/debug/app-debug.apk
